--- a/Resources/Prototypes/Entities/Clothing/Masks/masks.yml
+++ b/Resources/Prototypes/Entities/Clothing/Masks/masks.yml
@@ -626,7 +626,7 @@
     replacement: italian
 
 - type: entity
-  parent: ClothingMaskBase
+  parent: [BaseSyndicateContraband, ClothingMaskBase]
   id: ClothingMaskNinja
   name: ninja mask
   description: A close-fitting nano-enhanced mask that acts both as an air filter and a post-modern fashion statement.
