--- a/Resources/Prototypes/Entities/Clothing/Shoes/specific.yml
+++ b/Resources/Prototypes/Entities/Clothing/Shoes/specific.yml
@@ -111,7 +111,7 @@
   - type: NoSlip
 
 - type: entity
-  parent: ClothingShoesBaseButcherable
+  parent: [BaseSyndicateContraband, ClothingShoesBaseButcherable]
   id: ClothingShoesSpaceNinja
   name: space ninja shoes
   description: A pair of nano-enhanced boots with built-in magnetic suction cups.
