--- a/Resources/Prototypes/Entities/Objects/Misc/bedsheets.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/bedsheets.yml
@@ -306,7 +306,7 @@
 
 - type: entity
   id: BedsheetSyndie
-  parent: BedsheetBase
+  parent: [BaseSyndicateContraband, BedsheetBase]
   name: syndicate bedsheet
   description: It has a syndicate emblem and it has an aura of evil.
   components:
