--- a/Resources/Prototypes/Entities/Objects/Misc/identification_cards.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/identification_cards.yml
@@ -640,7 +640,7 @@
     job: AtmosphericTechnician
 
 - type: entity
-  parent: IDCardStandard
+  parent: [BaseSyndicateContraband, IDCardStandard]
   id: SyndicateIDCard
   name: syndicate ID card
   components:
