--- a/Resources/Prototypes/Entities/Objects/Weapons/Throwable/throwing_stars.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Throwable/throwing_stars.yml
@@ -43,7 +43,7 @@
     damage: 10
 
 - type: entity
-  parent: ThrowingStar
+  parent: [ BaseSyndicateContraband, ThrowingStar ]
   id: ThrowingStarNinja
   name: ninja throwing star
   components:
