Adds printed receipts to cargo request console, more setup code for the cartridge, fixes the debug assertion crash when inserting spesos

--- a/Resources/Prototypes/Entities/Objects/Devices/cartridges.yml
+++ b/Resources/Prototypes/Entities/Objects/Devices/cartridges.yml
@@ -158,7 +158,7 @@
 - type: entity
   parent: BaseItem
   id: CargoOrderTrackerCartridge
-  name: cargo order tracker cartridge
+  name: CargoTracker cartridge
   description: A program for tracking your cargo orders.
   components:
   - type: Sprite
